<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.signup.SignupActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Name"
        android:layout_marginTop="225dp"
        android:textColorHint="@color/primary"
        app:boxStrokeColor="@color/primary"
        app:hintTextColor="@color/primary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="5dp"
            android:inputType="textPersonName"
            android:hint="Name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Email"
        android:layout_below="@+id/Name"
        android:layout_marginTop="18dp"
        android:textColorHint="@color/primary"
        app:boxStrokeColor="@color/primary"
        app:hintTextColor="@color/primary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:inputType="textEmailAddress"
            android:hint="E-mail"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Password"
        android:layout_below="@+id/Email"
        android:layout_marginTop="18dp"
        android:textColorHint="@color/primary"
        app:boxStrokeColor="@color/primary"
        app:hintTextColor="@color/primary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="5dp"
            android:inputType="textPassword"
            android:hint="Password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Mobile"
        android:layout_below="@+id/Password"
        android:layout_marginTop="18dp"
        android:textColorHint="@color/primary"
        app:boxStrokeColor="@color/primary"
        app:hintTextColor="@color/primary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userMobileNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:drawableStart="@drawable/ic_mobile"
            android:drawablePadding="5dp"
            android:maxLength="10"
            android:hint="Mobile"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/gen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Mobile"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/Gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/lblGen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:shadowColor="@color/black"
                android:text="Gender"/>

            <RadioButton
                android:id="@+id/genMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/primary"
                android:checked="true"
                android:text="Male"/>

            <RadioButton
                android:id="@+id/genFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/primary"
                android:text="Female"/>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gen"
        android:gravity="center">

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:layout_gravity="center_horizontal"
            app:initialCornerAngle="27dp"
            android:textStyle="bold"
            android:text="@string/signup"
            android:textColor="#FFFFFF"
            app:spinning_bar_color="@color/white"
            app:spinning_bar_width="4dp"
            app:spinning_bar_padding="5dp"
            android:textSize="24dp"
            tools:ignore="MissingClass"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="320dp"
        android:layout_height="190dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        app:srcCompat="@drawable/food"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_below="@+id/btnLayout">

        <TextView
            android:id="@+id/lblLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="#000000"
            android:text="@string/alreadyHaveAc"/>

        <TextView
            android:id="@+id/GoTo_Login"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_margin="3dp"
            android:layout_toRightOf="@+id/lblLogin"
            android:fontFamily="@font/chrustyrock"
            android:text="@string/login"
            android:layout_marginTop="3dp"
            android:padding="3dp"
            android:textColor="@color/primary"
            android:textSize="15dp" />

    </LinearLayout>

    </RelativeLayout>

</ScrollView>